--- a/topico1/pom.xml
+++ b/topico1/pom.xml
@@ -2,17 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <parent>
+	<groupId>com.github.keslleylima</groupId>
+	<artifactId>i-2018</artifactId>
+	<version>1.0.0</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.ufg.inf.es.integracao</groupId>
-    <artifactId>i-2018</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>RELEASE</version>
-        </dependency>
-    </dependencies>
+     <groupId>com.github.keslleylima</groupId>
+    <artifactId>topico1</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0.0</version>
+
+    <name>topico1</name>
 
 </project>
