--- a/topico3/pom.xml
+++ b/topico3/pom.xml
@@ -19,6 +19,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
 
     <groupId>com.github.keslleylima</groupId>
